Update 2020-11-27-installing-intellij-with-javafx.md